@@ -34,9 +34,6 @@ BTN_OPT_OPTIONS_FWD = 32;
 BTN_OPT_OPTIONS_BACK = 128;
 BTN_OPT_ACTIVATE = 16384;
 
-
-
-
 ;Plugins section
 [PLUGINS]
 ;User Interface plugin. Check your installation.
@@ -44,6 +41,8 @@ BTN_OPT_ACTIVATE = 16384;
 ;UI_Text3D.prx = 3D Accelerated Text UI
 UI=UI_Text.prx;
 UI_SKIN=Default;
+;Default Visualizer Plugin
+DEFAULT_VISUALIZER=VIS_ScopeDots.prx
 
 [WIFI]
 ; If set to 1, then PROFILE will be used.
